<resources>
    <string name="app_name">CodeLunch</string>
    <!-- Notification Settings -->
    <string name="notification_header">Notifications</string>
    <string name="send_notification_switch">Send Notifications</string>
    <string name="auto_enable_school_switch">Auto-Enable School Notifications</string>
    <string name="auto_enable_menu_switch">Auto-Enable Menu Notifications</string>
    <string name="auto_enable_category_switch">Auto-Enable Category Notifications</string>
    <string name="customize_notification">Customize Notifications</string>
    <!-- Customize Notifications Settings -->
    <string name="schools_header">School</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="customize">Customize</string>
    <string name="menus_to_customize">Menu(s) to Customize</string>
    <string name="categories_to_customize">Categories(s) to Customize</string>
    <!-- Advanced Settings -->
    <string name="show_developer_options">Show Developer Options</string>
    <string name="developer_options">Developer Options</string>
    <string name="nutrislice_storage">Data for schools</string>
    <string name="nutrislice_storage_data">Edit Data</string>
    <string name="nutrislice_storage_invalid_input">Invalid Input; not saving</string>
    <string name="past_request_category_title">Data from previous requests</string>
    <string name="max_past_request_store">Previous requests to store</string>
    <!-- Time -->
    <string name="time_send_header">Time</string>
    <!-- Find School -->
    <string name="find_school_hint">Find School</string>
    <string name="no_schools_found">No schools with this name found</string>
    <string name="search_after_3">Will start searching after 3 characters are entered</string>
    <string name="unable_to_connect_to_nutrislice_retry">Unable to contact Nutrislice, check you internet connection. Click here to retry</string>
    <string name="unable_to_connect_to_nutrislice">Unable to contact Nutrislice, check you internet connection.</string>
    <string name="added_to_storage">Menu successfully added!</string>
    <!-- Notification -->
    <string name="notification_title">Today\'s Menu. Tap to see more!</string>
    <string name="notification_schools_unable">Schools unable to get menu from</string>
    <string name="channel_name">CodeLunch</string>
    <string name="channel_description">Notifications for the daily menu</string>
    <string name="send_notification">Send Notification Now</string>
    <!-- See Full Menu -->
    <string name="time_updated">Time Updated</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="search">Search</string>
    <string name="continueText">Continue</string>
    <string name="notification">Notification</string>
    <string name="support">Support</string>
    <string name="organization">ORG</string>
    <string name="add">Add</string>
    <string name="name">Name</string>
    <string name="state">State</string>

    <!-- Errors -->
    <string name="unable_connect_retry">Unable to Connect; Try Again Later.</string>

    <!-- About Me -->
    <string name="author_name">Name: Joshua Miller</string>
    <string name="author_school">School: Xaverian Brothers High School, Westwood MA</string>
    <string name="author_song">♥ Song: \"Fireflies\" <i>by Owl City</i></string>


    <!-- Support -->
    <string name="discordTextAndLink">Discord: <a href="https://discord.gg/ypgcxbed">discord.gg/ypgcxbed</a></string>
    <string name="discordLink">https://discord.gg/ypgcxbed</string>
    <string name="emailTextAndLink">Email: <a href="codelunchjm@gmail.com">codelunchjm@gmail.com</a></string>
    <string name="emailLink">codelunchjm@gmail.com</string>
    <string name="redditLink">https://www.reddit.com/r/CodeLunch/</string>
    <string name="redditLinkAndText">Reddit: <a href="https://www.reddit.com/r/CodeLunch/">reddit.com/r/CodeLunch/</a></string>
    <string name="title_activity_customize_notifications_category">
        CustomizeNotificationsCategoryActivity
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="refresh">Refresh</string>
    <string name="welcome_message">Welcome to CodeLunch!</string>
    <string name="get_started">Get Started</string>
    <string name="powered_by">Powered By</string>
    <string name="set_notification_settings">Set Notification Settings:</string>
    <string name="advanced">Advanced</string>
    <string name="auto_enable_notifications">Auto Enable Notifications</string>
    <string name="schools">Schools:</string>

</resources>