<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/notification"
        android:icon="@drawable/ic_baseline_notifications_24">
        <Preference
            android:title="@string/set_notification_settings"
            android:fragment="com.codelunch.app.settings.NotificationsSettingsFragment"/>
        <Preference
            android:title="@string/customize_notification">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.codelunch.app"
                android:targetClass="com.codelunch.app.settings.customizeNotifications.CustomizeNotificationsSchoolActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advanced"
        android:icon="@drawable/ic_baseline_warning_24">
        <SwitchPreference
            android:defaultValue="false"
            android:key="developer"
            android:title="@string/show_developer_options" />
        <Preference
            android:key="developerPreference"
            android:fragment="com.codelunch.app.settings.DeveloperSettingsFragment"
            android:title="@string/developer_options" />
    </PreferenceCategory>
</PreferenceScreen>