<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/nutrislice_storage">
        <EditTextPreference
            android:key="nutrisliceDataViewer"
            android:title="@string/nutrislice_storage_data"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/past_request_category_title">

        <EditTextPreference
            android:key="max_previous_request_store"
            android:defaultValue="8"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/max_past_request_store"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>
</PreferenceScreen>